force-app/main/default/objects/Building__c/fields/Building_Address__c.field-meta.xml
<CustomField>
    <fullName>Building_Address__c</fullName>
    <label>Building Address OLD</label>
    <type>Address</type>
</CustomField>