force-app/main/default/objects/Building__c/fields/Building_Height__c.field-meta.xml
<CustomField>
    <fullName>Building_Height__c</fullName>
    <inlineHelpText>Indication of the Building Highest Level (mm)</inlineHelpText>
    <label>Building Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>