force-app/main/default/objects/Building__c/fields/Building_Location__c.field-meta.xml
<CustomField>
    <fullName>Building_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location.LocationType</field>
            <operation>equals</operation>
            <value>Building</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Buildings</relationshipLabel>
    <relationshipName>Buildings</relationshipName>
    <type>Lookup</type>
</CustomField>