force-app/main/default/objects/Building__c/fields/BuildingAddress__c.field-meta.xml
<CustomField>
    <fullName>BuildingAddress__c</fullName>
    <label>Building Address</label>
    <type>Address</type>
</CustomField>