force-app/main/default/objects/Building__c/fields/BuildingCountryCode__c.field-meta.xml
<CustomField>
    <fullName>BuildingCountryCode__c</fullName>
    <formula>TEXT(BuildingAddress__CountryCode__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Country Code</label>
    <type>Text</type>
</CustomField>