force-app/main/default/objects/Building__c/fields/BuildingOwnedBy__c.field-meta.xml
<CustomField>
    <fullName>BuildingOwnedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owned By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Buildings</relationshipLabel>
    <relationshipName>BuildingOwners</relationshipName>
    <type>Lookup</type>
</CustomField>