force-app/main/default/objects/Building__c/fields/Combined_load__c.field-meta.xml
<CustomField>
    <fullName>Combined_load__c</fullName>
    <inlineHelpText>Indication of the Combined Load</inlineHelpText>
    <label>Combined load</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>