force-app/main/default/objects/Building__c/fields/Drainage_holes__c.field-meta.xml
<CustomField>
    <fullName>Drainage_holes__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indication whether Drainage holes are required</inlineHelpText>
    <label>Drainage holes DEL</label>
    <type>Checkbox</type>
</CustomField>