force-app/main/default/objects/Building__c/fields/Heatsoak__c.field-meta.xml
<CustomField>
    <fullName>Heatsoak__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indication whether heat soak is required</inlineHelpText>
    <label>Heatsoak DEL</label>
    <type>Checkbox</type>
</CustomField>