force-app/main/default/objects/Building__c/fields/On_Hill_or_Slope__c.field-meta.xml
<CustomField>
    <fullName>On_Hill_or_Slope__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indication whether Building is on a Hill or Slope</inlineHelpText>
    <label>On Hill or Slope</label>
    <type>Checkbox</type>
</CustomField>