force-app/main/default/objects/Building__c/fields/OwnedBy__c.field-meta.xml
<CustomField>
    <fullName>OwnedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account that Owns the Building</description>
    <label>Owned By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Buildings</relationshipLabel>
    <relationshipName>Buildings</relationshipName>
    <type>Lookup</type>
</CustomField>