force-app/main/default/objects/Building__c/fields/PropertyType__c.field-meta.xml
<CustomField>
    <fullName>PropertyType__c</fullName>
    <description>The Type of Property</description>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Property_Types</valueSetName>
    </valueSet>
</CustomField>