force-app/main/default/objects/Building__c/fields/Seals_between_Panes__c.field-meta.xml
<CustomField>
    <fullName>Seals_between_Panes__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether Seals between Panes are required</inlineHelpText>
    <label>Seals between Panes</label>
    <type>Checkbox</type>
</CustomField>