force-app/main/default/objects/Building__c/fields/Snow_Load__c.field-meta.xml
<CustomField>
    <fullName>Snow_Load__c</fullName>
    <label>Snow Load</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>