force-app/main/default/objects/Building__c/fields/Structural_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Structural_Analysis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Structural Analysis</label>
    <referenceTo>Structural_Analysis__c</referenceTo>
    <relationshipLabel>Buildings</relationshipLabel>
    <relationshipName>Buildings</relationshipName>
    <type>Lookup</type>
</CustomField>