force-app/main/default/objects/Building__c/fields/TerrainType__c.field-meta.xml
<CustomField>
    <fullName>TerrainType__c</fullName>
    <label>Terrain Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Terrain_Types</valueSetName>
    </valueSet>
</CustomField>