force-app/main/default/objects/Building__c/fields/Wind_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Wind_Pressure__c</fullName>
    <inlineHelpText>Wind pressure (kN/m2)</inlineHelpText>
    <label>Wind Pressure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>