force-app/main/default/objects/Building__c/fields/Wind_Speed__c.field-meta.xml
<CustomField>
    <fullName>Wind_Speed__c</fullName>
    <inlineHelpText>Reference Wind speed (m/s)</inlineHelpText>
    <label>Wind Speed DEL</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>