force-app/main/default/objects/Building__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PropertyType__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>BuildingLocation__c</columns>
    <columns>StructuralAnalysis__c</columns>
    <columns>BuildingAddress__City__s</columns>
    <columns>BuildingAddress__Street__s</columns>
    <columns>BuildingAddress__CountryCode__s</columns>
    <columns>BuildingAddress__PostalCode__s</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>